--- a/Cultural Hub/WebApp/appsettings.json
+++ b/Cultural Hub/WebApp/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDB)\\MaraSQLServer;database=HubDB;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;database=HubDBTEST;Trusted_Connection=true;MultipleActiveResultSets=true"
   }
 }
