added events storage

--- a/Cultural Hub/WebApp/appsettings.json
+++ b/Cultural Hub/WebApp/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDB)\\TaniaSQLServer;database=HubDB;Trusted_Connection=true;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
