--- a/Cultural Hub/WebApp/WebApp.csproj
+++ b/Cultural Hub/WebApp/WebApp.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <Compile Remove="Migrations\20200421191147_InitialDbMigration.cs" />
     <Compile Remove="Migrations\20200421191147_InitialDbMigration.Designer.cs" />
+    <Compile Remove="Migrations\20200421191311_InitialDbMigration.cs" />
+    <Compile Remove="Migrations\20200421191311_InitialDbMigration.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
