--- a/Cultural Hub/WebApp/appsettings.json
+++ b/Cultural Hub/WebApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DbEvent;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,8 +9,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDB)\\TaniaSQLServer;database=HubDB;Trusted_Connection=true;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
+  
 }
