--- a/Cultural Hub/Repository.SQL/Repository.SQL.csproj
+++ b/Cultural Hub/Repository.SQL/Repository.SQL.csproj
@@ -5,6 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200426195209_InitialMigration.cs" />
+    <Compile Remove="Migrations\20200426195209_InitialMigration.Designer.cs" />
+    <Compile Remove="Migrations\20200426202007_AddPKToPictures.cs" />
+    <Compile Remove="Migrations\20200426202007_AddPKToPictures.Designer.cs" />
+    <Compile Remove="Migrations\20200426203303_DeletedAsNullableFromEvents.cs" />
+    <Compile Remove="Migrations\20200426203303_DeletedAsNullableFromEvents.Designer.cs" />
+    <Compile Remove="Migrations\20200427103757_AddedSoftDeleteForPictures.cs" />
+    <Compile Remove="Migrations\20200427103757_AddedSoftDeleteForPictures.Designer.cs" />
+    <Compile Remove="Migrations\20200506143041_ChangedDurationType.cs" />
+    <Compile Remove="Migrations\20200506143041_ChangedDurationType.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
   </ItemGroup>
 
