--- a/Cultural Hub/WebApp/appsettings.json
+++ b/Cultural Hub/WebApp/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "CulturalHubConnection": "Data Source=(localdb)\\VladSQL;Initial Catalog=CulturalHub;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
