--- a/Cultural Hub/Repository.SQL/Repository.SQL.csproj
+++ b/Cultural Hub/Repository.SQL/Repository.SQL.csproj
@@ -1,28 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Migrations\20200426195209_InitialMigration.cs" />
-    <Compile Remove="Migrations\20200426195209_InitialMigration.Designer.cs" />
-    <Compile Remove="Migrations\20200426202007_AddPKToPictures.cs" />
-    <Compile Remove="Migrations\20200426202007_AddPKToPictures.Designer.cs" />
-    <Compile Remove="Migrations\20200426203303_DeletedAsNullableFromEvents.cs" />
-    <Compile Remove="Migrations\20200426203303_DeletedAsNullableFromEvents.Designer.cs" />
-    <Compile Remove="Migrations\20200427103757_AddedSoftDeleteForPictures.cs" />
-    <Compile Remove="Migrations\20200427103757_AddedSoftDeleteForPictures.Designer.cs" />
-    <Compile Remove="Migrations\20200506143041_ChangedDurationType.cs" />
-    <Compile Remove="Migrations\20200506143041_ChangedDurationType.Designer.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
