--- a/Cultural Hub/WebApp/appsettings.json
+++ b/Cultural Hub/WebApp/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "CulturalHubConnection": "Data Source=(localdb)\\VladSQL;Initial Catalog=CulturalHub;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "CulturalHubConnection": "Data Source=(localdb)\\VladSQL;Initial Catalog=CulturalHub;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "LoginConnection": "Data Source=(localdb)\\VladSQL;Initial Catalog=LoginDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
 
   "Logging": {
