--- a/Cultural Hub/Repository.SQL/Repository.SQL.csproj
+++ b/Cultural Hub/Repository.SQL/Repository.SQL.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
