--- a/Cultural Hub/WebApp/WebApp.csproj
+++ b/Cultural Hub/WebApp/WebApp.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="UploadedFiles\" />
     <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
